[gd_scene load_steps=3 format=3 uid="uid://m5p7ticygll8"]

[ext_resource type="Script" uid="uid://c7tqjsn85ry5p" path="res://scripts/killzone.gd" id="1_jvagm"]
[ext_resource type="AudioStream" uid="uid://tqyrb44ad52s" path="res://Asset/brackeys_platformer_assets/sounds/GameOver.mp3" id="2_iyfga"]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_jvagm")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_iyfga")
volume_db = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
